NOW-20: certificate installation for Linux